--- a/individual-work/wba-projekt-2/styles/_homepage.scss
+++ b/individual-work/wba-projekt-2/styles/_homepage.scss
@@ -1,4 +1,4 @@
-@media only screen and (min-width: $width-desktop-bp) {
+@media only screen and (min-width: $width-desktop-bp) and (max-width: 8490px) {
     #index {
         margin-inline: 8em;
         .first-section {
@@ -13,7 +13,6 @@
                 }
             }
             .first-section-heading-container {
-                /* text-align: center; */
                 margin-top: 2em;
                 display: flex;
                 justify-content: center;
@@ -80,8 +79,7 @@
             .second-section-content-organizer {
                 height: 80%;
                 display: flex;
-                flex-direction: column;
-                justify-content: center;
+                @include flex-column-center;
                 .second-section-first-image-desc-container {
                     display: flex;
                     flex-direction: row;
@@ -89,9 +87,7 @@
                     padding-right: 14em;
                     padding-bottom: 1em;
                     .second-section-first-desc-container {
-                        display: flex;
-                        justify-content: center;
-                        flex-direction: column;
+                        @include flex-column-center;
                         height: 100%;
                         padding-left: 2em;
                         p {
@@ -118,9 +114,7 @@
                     padding-top: 1em;
                     padding-left: 13em;
                     .second-section-second-desc-container {
-                        display: flex;
-                        justify-content: center;
-                        flex-direction: column;
+                        @include flex-column-center;
                         height: 100%;
                         padding-right: 4em;
                         p {
@@ -176,6 +170,7 @@
             .third-section-image-desc-container {
                 width: 100%;
                 margin-top: 10em;
+                margin-inline: 8em;
                 display: flex;
                 .third-section-image-desc-sub-container {
                     display: inline-flex;
@@ -184,7 +179,8 @@
                         align-self: center;
                         p,
                         h4 {
-                            max-width: 20vw;
+                            width: 100%;
+                            max-width: 40vw;
                             padding: 2em;
                             padding-left: 3em;
                             font-size: 130%;
@@ -204,9 +200,9 @@
     }
 }
 
-@media only screen and (max-width: $width-tablet-bp) {
+@media only screen and (min-width: $width-tablet-bp) and (max-width: 1279px) {
     #index {
-        margin-inline: 1em;
+        margin-inline: 4em;
         .first-section {
             display: flex;
             flex-direction: column;
@@ -221,9 +217,7 @@
             }
             .first-section-heading-container {
                 margin-top: 2em;
-                display: flex;
-                justify-content: center;
-                flex-direction: column;
+                @include flex-column-center;
                 width: 100%;
                 align-items: center;
                 h1 {
@@ -250,7 +244,8 @@
                 img {
                     width: 100%;
                     max-width: fit-content;
-                    height: 15em;
+                    margin-inline: 1em;
+                    height: 25em;
                     transition-duration: .5s;
                     filter: blur(1px) grayscale(1);
                 }
@@ -284,19 +279,13 @@
         .second-section {
             .second-section-content-organizer {
                 height: 80%;
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
+                @include flex-column-center;
                 .second-section-first-image-desc-container {
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: center;
+                    @include flex-column-center;
                     padding-bottom: 2em;
                     margin-inline: 1em;
                     .second-section-first-desc-container {
-                        display: flex;
-                        justify-content: center;
-                        flex-direction: column;
+                        @include flex-column-center;
                         height: 100%;
                         margin-inline: 1em;
                         p {
@@ -322,9 +311,7 @@
                     padding-bottom: 4em;
                     margin-inline: 1em;
                     .second-section-second-desc-container {
-                        display: flex;
-                        justify-content: center;
-                        flex-direction: column;
+                        @include flex-column-center;
                         height: 100%;
                         margin-inline: 1em;
                         p {
@@ -405,7 +392,7 @@
     }
 }
 
-@media only screen and (max-width: $width-iphone8-bp) {
+@media only screen and (min-width: $width-iphone8-bp) and (max-width: 767px) {
     #index {
         margin-inline: 1em;
         .first-section {
@@ -422,9 +409,7 @@
             }
             .first-section-heading-container {
                 margin-top: 2em;
-                display: flex;
-                justify-content: center;
-                flex-direction: column;
+                @include flex-column-center;
                 width: 100%;
                 align-items: center;
                 h1 {
@@ -449,6 +434,7 @@
                 justify-content: center;
                 position: relative;
                 img {
+                    margin-inline: 1em;
                     width: 100%;
                     max-width: fit-content;
                     height: 15em;
@@ -485,18 +471,12 @@
         .second-section {
             .second-section-content-organizer {
                 height: 80%;
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
+                @include flex-column-center;
                 .second-section-first-image-desc-container {
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: center;
+                    @include flex-column-center;
                     padding-bottom: 2em;
                     .second-section-first-desc-container {
-                        display: flex;
-                        justify-content: center;
-                        flex-direction: column;
+                        @include flex-column-center;
                         height: 100%;
                         margin-inline: 1em;
                         p {
@@ -522,9 +502,7 @@
                     padding-top: 1em;
                     padding-bottom: 4em;
                     .second-section-second-desc-container {
-                        display: flex;
-                        justify-content: center;
-                        flex-direction: column;
+                        @include flex-column-center;
                         height: 100%;
                         margin-inline: 1em;
                         p {
@@ -606,208 +584,7 @@
     }
 }
 
-@media only screen and (max-width: $width-tablet-bp) {
-    #index {
-        margin-inline: 4em;
-        .first-section {
-            display: flex;
-            flex-direction: column;
-            margin-bottom: 3em;
-            #helper {
-                display: grid;
-                .first-section-heading-container,
-                .first-section-image-container {
-                    grid-column: 1;
-                    grid-row: 1;
-                }
-            }
-            .first-section-heading-container {
-                margin-top: 2em;
-                display: flex;
-                justify-content: center;
-                flex-direction: column;
-                width: 100%;
-                align-items: center;
-                h1 {
-                    font-family: customFontFour;
-                    color: white;
-                    position: absolute;
-                    z-index: 9;
-                    display: inline-flex;
-                    background-color: transparent;
-                    font-weight: bolder;
-                    font-size: 4rem;
-                    transition-duration: .2s;
-                    user-select: none;
-                }
-            }
-            .first-section-image-container {
-                height: 50%;
-                width: 100%;
-                margin-top: 3em;
-                display: flex;
-                flex-direction: row;
-                justify-content: center;
-                position: relative;
-                img {
-                    width: 100%;
-                    max-width: fit-content;
-                    height: 15em;
-                    transition-duration: .5s;
-                    filter: blur(1px) grayscale(1);
-                }
-                img:hover {
-                    filter: blur(0) grayscale(0);
-                    z-index: 10;
-                }
-                .first-section-image-container:nth-child(1) {
-                    padding-bottom: 5em;
-                    height: 5em;
-                }
-                .first-section-image-container:nth-child(2) {
-                    align-self: flex-end;
-                    height: 100%;
-                }
-            }
-        }
-        .first-section-paragraph-container {
-            margin-top: 5.5em;
-            h2 {
-                padding: 2em 2em;
-                padding-left: 1em;
-                font-size: 1.2rem;
-                transition-duration: .2s;
-                border-left: 3px solid black;
-            }
-            h2:hover {
-                transition-duration: .2s;
-            }
-        }
-        .second-section {
-            .second-section-content-organizer {
-                height: 80%;
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                .second-section-first-image-desc-container {
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: center;
-                    padding-bottom: 2em;
-                    margin-inline: 1em;
-                    .second-section-first-desc-container {
-                        display: flex;
-                        justify-content: center;
-                        flex-direction: column;
-                        height: 100%;
-                        margin-inline: 1em;
-                        p {
-                            width: 100%;
-                            height: 100%;
-                        }
-                        h4 {
-                            margin-top: 1em;
-                            padding-bottom: .3em;
-                            font-weight: bold;
-                        }
-                    }
-                    img {
-                        width: fit-content;
-                        height: auto;
-                    }
-                }
-                .second-section-second-image-desc-container {
-                    display: flex;
-                    flex-direction: column-reverse;
-                    justify-content: center;
-                    padding-top: 1em;
-                    padding-bottom: 4em;
-                    margin-inline: 1em;
-                    .second-section-second-desc-container {
-                        display: flex;
-                        justify-content: center;
-                        flex-direction: column;
-                        height: 100%;
-                        margin-inline: 1em;
-                        p {
-                            width: 100%;
-                            height: 100%;
-                        }
-                        h4 {
-                            margin-top: 1em;
-                            padding-bottom: .3em;
-                            font-weight: bold;
-                        }
-                    }
-                    img {
-                        width: fit-content;
-                        height: auto;
-                    }
-                }
-            }
-            .second-section-paragraph-container {
-                min-height: 20%;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                box-shadow: 0px 20px 20px -10px rgba(95, 95, 95, 0.329);
-                h3 {
-                    margin: 4em;
-                    margin-inline: 1em;
-                    text-align: center;
-                    font-size: 1.2rem;
-                }
-            }
-        }
-        .third-section {
-            margin-top: 5em;
-            .third-section-image-container {
-                margin-inline: 1em;
-                display: grid;
-                gap: 1em;
-                grid-template-columns: repeat(1, 1fr);
-                grid-template-rows: repeat(6, 1fr);
-                div {
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                }
-            }
-            .third-section-image-desc-container {
-                width: 100%;
-                margin-top: 6em;
-                display: block;
-                .third-section-image-desc-sub-container {
-                    display: flex;
-                    flex-direction: column-reverse;
-                    align-content: center;
-                    .third-section-desc-container {
-                        align-self: center;
-                        margin-bottom: 1.3em;
-                        p,
-                        h4 {
-                            padding: 1em;
-                            font-size: 110%;
-                            padding-top: .5em;
-                            margin-inline: em;
-                        }
-                        h4 {
-                            padding-bottom: 0;
-                            font-weight: bold;
-                        }
-                    }
-                    img {
-                        padding-inline: 5em;
-                        max-width: fit-content;
-                        height: auto;
-                    }
-                }
-            }
-        }
-    }
-}
-
-@media only screen and (max-width: $width-general-bp) {
+@media only screen and (min-width: $width-general-bp) and (max-width: 450px) {
     #index {
         margin-inline: 1em;
         .first-section {
@@ -824,9 +601,7 @@
             }
             .first-section-heading-container {
                 margin-top: 2em;
-                display: flex;
-                justify-content: center;
-                flex-direction: column;
+                @include flex-column-center;
                 width: 100%;
                 align-items: center;
                 h1 {
@@ -837,7 +612,7 @@
                     display: inline-flex;
                     background-color: transparent;
                     font-weight: bolder;
-                    font-size: 3.5rem;
+                    font-size: 2rem;
                     transition-duration: .2s;
                     user-select: none;
                 }
@@ -872,11 +647,11 @@
             }
         }
         .first-section-paragraph-container {
-            margin-top: 5.5em;
+            margin-top: 4em;
             h2 {
                 padding: 2em 2em;
                 padding-left: 1em;
-                font-size: 1.2rem;
+                font-size: 1rem;
                 transition-duration: .2s;
                 border-left: 3px solid black;
             }
@@ -887,18 +662,12 @@
         .second-section {
             .second-section-content-organizer {
                 height: 80%;
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
+                @include flex-column-center;
                 .second-section-first-image-desc-container {
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: center;
+                    @include flex-column-center;
                     padding-bottom: 2em;
                     .second-section-first-desc-container {
-                        display: flex;
-                        justify-content: center;
-                        flex-direction: column;
+                        @include flex-column-center;
                         height: 100%;
                         margin-inline: 1em;
                         p {
@@ -924,9 +693,7 @@
                     padding-top: 1em;
                     padding-bottom: 4em;
                     .second-section-second-desc-container {
-                        display: flex;
-                        justify-content: center;
-                        flex-direction: column;
+                        @include flex-column-center;
                         height: 100%;
                         margin-inline: 1em;
                         p {
@@ -1008,7 +775,8 @@
     }
 }
 
-@media only screen and (max-width: $width-legacy-bp) {
+
+/* @media only screen and (max-width: $width-legacy-bp) {
     #index {
         margin-inline: 3em;
         .first-section {
@@ -1023,11 +791,8 @@
                 }
             }
             .first-section-heading-container {
-                /* text-align: center; */
                 margin-top: 2em;
-                display: flex;
-                justify-content: center;
-                flex-direction: column;
+                @include flex-column-center;
                 width: 100%;
                 align-items: center;
                 h1 {
@@ -1089,9 +854,7 @@
             height: 100vh;
             .second-section-content-organizer {
                 height: 80%;
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
+                @include flex-column-center;
                 .second-section-first-image-desc-container {
                     display: flex;
                     flex-direction: row;
@@ -1099,9 +862,7 @@
                     padding-right: 1em;
                     padding-bottom: 1em;
                     .second-section-first-desc-container {
-                        display: flex;
-                        justify-content: center;
-                        flex-direction: column;
+                        @include flex-column-center;
                         height: 100%;
                         padding-left: 2em;
                         p {
@@ -1128,19 +889,13 @@
                     padding-top: 1em;
                     padding-left: 1em;
                     .second-section-second-desc-container {
-                        display: flex;
-                        justify-content: center;
-                        flex-direction: column;
+                        @include flex-column-center;
                         height: 100%;
                         padding-right: 4em;
                         p {
                             width: 40vw;
                             max-width: 25em;
                             height: 100%;
-                            /* padding: 3em;*/
-                            /* padding-bottom: -10em; */
-                            /* padding: max(3vw, 1em); */
-                            /* font-size: clamp(1.20rem, calc(0.94rem + 1.32vw), 1.88rem); */
                         }
                         h4 {
                             padding-bottom: .3em;
@@ -1212,4 +967,4 @@
             }
         }
     }
-}
+} */
