--- a/individual-work/wba-projekt-2/styles/_header.scss
+++ b/individual-work/wba-projekt-2/styles/_header.scss
@@ -63,14 +63,14 @@
 
 @media only screen and (min-width: $width-tablet-bp) and (max-width: 1279px) {
     header {
-        margin-bottom: 1em;
-        height: 8vh;
+        height: 4.5em;
+        margin-bottom: 4em;
         position: sticky;
         top: 0;
         background-color: white;
         z-index: 999;
         nav {
-            margin-inline: 1em;
+            margin-inline: 4em;
             .navbar-main {
                 display: flex;
                 justify-content: space-between;
@@ -129,14 +129,12 @@
 
 @media only screen and (min-width: $width-iphone8-bp) and (max-width: 767px) {
     header {
+        height: 4.5em;
         margin-bottom: 1em;
-        height: 8vh;
         position: sticky;
         top: 0;
+        background-color: white;
         z-index: 999;
-        display: flex;
-        align-items: center;
-        justify-content: center;
         nav {
             margin-inline: .6em;
             .navbar-main {
@@ -173,21 +171,6 @@
                         text-transform: uppercase;
                         text-decoration: none;
                         color: black;
-                        .button-container a:after {
-                            background: none repeat scroll 0 0 transparent;
-                            bottom: 0;
-                            content: "";
-                            height: 2px;
-                            left: 50%;
-                            position: absolute;
-                            background: black;
-                            transition: width 0.3s ease 0s, left 0.3s ease 0s;
-                            width: 0;
-                        }
-                        .button-container a:hover:after {
-                            width: 100%;
-                            left: 0;
-                        }
                     }
                 }
             }
@@ -197,13 +180,18 @@
 
 @media only screen and (min-width: $width-general-bp) and (max-width: 513px) {
     header {
-        height: 5em;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        height: 4.5em;
+        margin-bottom: 1em;
+        position: sticky;
+        top: 0;
+        background-color: white;
+        z-index: 999;
         nav {
             margin-inline: .6em;
             .navbar-main {
+                display: flex;
+                justify-content: space-between;
+                align-content: center;
                 .logo {
                     img {
                         height: 40px;
@@ -217,6 +205,9 @@
                     }
                 }
                 .button {
+                    margin: 10px;
+                    display: flex;
+                    align-items: center;
                     .button-container li {
                         position: relative;
                         float: left;
@@ -224,28 +215,13 @@
                         width: fit-content;
                         text-align: center;
                         background-color: transparent;
-                        font-size: 80%;
+                        font-size: 90%;
                         margin-left: .7em;
                     }
                     .button-container a {
                         text-transform: uppercase;
                         text-decoration: none;
                         color: black;
-                        .button-container a:after {
-                            background: none repeat scroll 0 0 transparent;
-                            bottom: 0;
-                            content: "";
-                            height: 2px;
-                            left: 50%;
-                            position: absolute;
-                            background: black;
-                            transition: width 0.3s ease 0s, left 0.3s ease 0s;
-                            width: 0;
-                        }
-                        .button-container a:hover:after {
-                            width: 100%;
-                            left: 0;
-                        }
                     }
                 }
             }
