--- a/individual-work/dvop-web/styles/style.css
+++ b/individual-work/dvop-web/styles/style.css
@@ -97,10 +97,9 @@ select {
 }
 
 /* breakpoints desktop */
-/* breakpoints  general*/
-/* breakpoints iphone8 */
 /* breakpoints ipad */
-/* legacy */
+/* breakpoints iphone8 */
+/* breakpoints  general*/
 @media only screen and (min-width: 1280px) and (max-width: 8490px) {
   header {
     height: 4.5em;
@@ -317,7 +316,7 @@ select {
   }
 }
 
-@media only screen and (min-width: 300px) and (max-width: 513px) {
+@media only screen and (min-width: 280px) and (max-width: 450px) {
   header {
     height: 4.5em;
     margin-bottom: 1em;
@@ -380,76 +379,12 @@ select {
   }
 }
 
-/* @media only screen and (max-width: $width-legacy-bp) {
-    header {
-        height: 4.5em;
-        margin-bottom: 4em;
-        position: sticky;
-        top: 0;
-        background-color: white;
-        z-index: 999;
-        nav {
-            margin-inline: 8em;
-            .navbar-main {
-                display: flex;
-                justify-content: space-between;
-                align-content: center;
-                .logo {
-                    img {
-                        height: 50px;
-                        margin: 10px;
-                    }
-                    #respon-img-mini {
-                        display: none;
-                    }
-                }
-                .button {
-                    margin: 10px;
-                    display: flex;
-                    align-items: center;
-                    .button-container li {
-                        position: relative;
-                        float: left;
-                        list-style: none;
-                        width: fit-content;
-                        text-align: center;
-                        background-color: transparent;
-                        font-size: clamp(90%, 120%, 125%);
-                        margin-left: .7em;
-                    }
-                    .button-container a {
-                        text-transform: uppercase;
-                        text-decoration: none;
-                        color: black;
-                        .button-container a:after {
-                            background: none repeat scroll 0 0 transparent;
-                            bottom: 0;
-                            content: "";
-                            height: 2px;
-                            left: 50%;
-                            position: absolute;
-                            background: black;
-                            transition: width 0.3s ease 0s, left 0.3s ease 0s;
-                            width: 0;
-                        }
-                        .button-container a:hover:after {
-                            width: 100%;
-                            left: 0;
-                        }
-                    }
-                }
-            }
-        }
-    }
-} */
 @media only screen and (min-width: 1280px) and (max-width: 8490px) {
   .footer-main {
     margin-inline: 20vw;
     margin-top: 10em;
     padding: 1em;
     border-top: 2px solid #857f7fa6;
-  }
-  .footer-main .footer-text-container {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -457,7 +392,12 @@ select {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    text-align: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   .footer-main .footer-text-container:nth-child(1) p {
     color: #857f7fa6;
@@ -477,8 +417,6 @@ select {
     margin-top: 5em;
     padding: .1em;
     border-top: 2px solid #857f7fa6;
-  }
-  .footer-main .footer-text-container {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -486,7 +424,12 @@ select {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    text-align: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   .footer-main .footer-text-container:nth-child(1) p {
     color: #857f7fa6;
@@ -506,8 +449,6 @@ select {
     margin-top: 5em;
     padding: .1em;
     border-top: 2px solid #857f7fa6;
-  }
-  .footer-main .footer-text-container {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -515,7 +456,12 @@ select {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    text-align: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   .footer-main .footer-text-container:nth-child(1) p {
     color: #857f7fa6;
@@ -529,14 +475,12 @@ select {
   }
 }
 
-@media only screen and (min-width: 300px) and (max-width: 513px) {
+@media only screen and (min-width: 280px) and (max-width: 450px) {
   .footer-main {
     margin-inline: 12vw;
     margin-top: 3em;
     padding: .1em;
     border-top: 2px solid #857f7fa6;
-  }
-  .footer-main .footer-text-container {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -544,7 +488,12 @@ select {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    text-align: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   .footer-main .footer-text-container:nth-child(1) p {
     color: #857f7fa6;
@@ -558,31 +507,6 @@ select {
   }
 }
 
-/* @media only screen and (max-width: $width-legacy-bp) {
-    .footer-main {
-        margin-inline: max(2vw, 20vw);
-        margin-top: 6em;
-        padding: 1em;
-        border-top: 2px solid $footer-color;
-        .footer-text-container {
-            display: flex;
-            flex-direction: column;
-            text-align: center;
-            &:nth-child(1) {
-                p {
-                    color: $footer-color;
-                    margin-top: .3em;
-                    font-size: clamp(.8vw, 1em);
-                    span {
-                        color: $footer-color;
-                        text-decoration: underline;
-                        font-size: clamp(.8vw, 1em);
-                    }
-                }
-            }
-        }
-    }
-} */
 @media only screen and (min-width: 1280px) and (max-width: 8490px) {
   #index {
     margin-inline: 8em;
@@ -612,13 +536,13 @@ select {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     width: 100%;
     -webkit-box-align: center;
         -ms-flex-align: center;
@@ -788,8 +712,6 @@ select {
     width: 40vw;
     max-width: 25em;
     height: 100%;
-    /* padding: 3em;*/
-    /* padding-bottom: -10em; */
     /* padding: max(3vw, 1em); */
     /* font-size: clamp(1.20rem, calc(0.94rem + 1.32vw), 1.88rem); */
   }
@@ -1492,7 +1414,7 @@ select {
   }
 }
 
-@media only screen and (min-width: 300px) and (max-width: 450px) {
+@media only screen and (min-width: 280px) and (max-width: 450px) {
   #index {
     margin-inline: 1em;
   }
@@ -1794,198 +1716,6 @@ select {
   }
 }
 
-/* @media only screen and (max-width: $width-legacy-bp) {
-    #index {
-        margin-inline: 3em;
-        .first-section {
-            display: flex;
-            flex-direction: column;
-            #helper {
-                display: grid;
-                .first-section-heading-container,
-                .first-section-image-container {
-                    grid-column: 1;
-                    grid-row: 1;
-                }
-            }
-            .first-section-heading-container {
-                margin-top: 2em;
-                @include flex-column-center;
-                width: 100%;
-                align-items: center;
-                h1 {
-                    font-family: customFontFour;
-                    color: white;
-                    position: absolute;
-                    z-index: 9;
-                    display: inline-flex;
-                    background-color: transparent;
-                    font-weight: bolder;
-                    font-size: 6rem;
-                    transition-duration: .2s;
-                    user-select: none;
-                }
-            }
-            .first-section-image-container {
-                height: 50%;
-                width: 100%;
-                margin-top: 3em;
-                display: flex;
-                flex-direction: row;
-                justify-content: center;
-                position: relative;
-                img {
-                    width: 100%;
-                    max-width: 85em;
-                    height: 30em;
-                    transition-duration: .5s;
-                    filter: blur(1px) grayscale(1);
-                }
-                img:hover {
-                    filter: blur(0) grayscale(0);
-                    z-index: 10;
-                }
-                .first-section-image-container:nth-child(1) {
-                    padding-bottom: 5em;
-                    height: 5em;
-                }
-                .first-section-image-container:nth-child(2) {
-                    align-self: flex-end;
-                    height: 100%;
-                }
-            }
-        }
-        .first-section-paragraph-container {
-            margin-top: 5.5em;
-            h2 {
-                padding: 2em 4em;
-                padding-left: 1em;
-                font-size: 1.6rem;
-                transition-duration: .2s;
-                border-left: 3px solid black;
-            }
-            h2:hover {
-                transition-duration: .2s;
-            }
-        }
-        .second-section {
-            height: 100vh;
-            .second-section-content-organizer {
-                height: 80%;
-                @include flex-column-center;
-                .second-section-first-image-desc-container {
-                    display: flex;
-                    flex-direction: row;
-                    justify-content: center;
-                    padding-right: 1em;
-                    padding-bottom: 1em;
-                    .second-section-first-desc-container {
-                        @include flex-column-center;
-                        height: 100%;
-                        padding-left: 2em;
-                        p {
-                            width: 100%;
-                            max-width: 25em;
-                            height: 100%;
-                        }
-                        h4 {
-                            padding-bottom: .3em;
-                            font-weight: bold;
-                            justify-self: flex-start;
-                        }
-                    }
-                    img {
-                        width: 100%;
-                        max-width: 25em;
-                        height: auto;
-                    }
-                }
-                .second-section-second-image-desc-container {
-                    display: flex;
-                    flex-direction: row;
-                    justify-content: center;
-                    padding-top: 1em;
-                    padding-left: 1em;
-                    .second-section-second-desc-container {
-                        @include flex-column-center;
-                        height: 100%;
-                        padding-right: 4em;
-                        p {
-                            width: 40vw;
-                            max-width: 25em;
-                            height: 100%;
-                        }
-                        h4 {
-                            padding-bottom: .3em;
-                            font-weight: bold;
-                        }
-                    }
-                    img {
-                        width: 100%;
-                        max-width: 25em;
-                        height: auto;
-                    }
-                }
-            }
-            .second-section-paragraph-container {
-                min-height: 20%;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                margin-inline: 4em;
-                box-shadow: 0px 20px 20px -10px rgba(95, 95, 95, 0.329);
-                h3 {
-                    margin: 4em;
-                    margin-inline: 6em;
-                    text-align: center;
-                    font-size: 1.2rem;
-                }
-            }
-        }
-        .third-section {
-            margin-top: 7em;
-            .third-section-image-container {
-                margin-inline: 4em;
-                display: grid;
-                gap: 1em;
-                grid-template-columns: repeat(1, 1fr);
-                grid-template-rows: repeat(6, 1fr);
-                div {
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                }
-            }
-            .third-section-image-desc-container {
-                width: 100%;
-                margin-top: 10em;
-                display: block;
-                .third-section-image-desc-sub-container {
-                    display: flex;
-                    flex-direction: column-reverse;
-                    align-items: center;
-                    .third-section-desc-container {
-                        align-self: center;
-                        p,
-                        h4 {
-                            padding: 2em;
-                            padding-left: 3em;
-                            font-size: 130%;
-                        }
-                        h4 {
-                            padding-bottom: 0;
-                            font-weight: bold;
-                        }
-                    }
-                    img {
-                        max-width: 40%;
-                        height: auto;
-                    }
-                }
-            }
-        }
-    }
-} */
 @media only screen and (min-width: 1280px) and (max-width: 8490px) {
   #about {
     margin-inline: 8em;
@@ -2514,50 +2244,46 @@ select {
     margin-top: 4em;
   }
   .about-section .text-container .box-1 {
-    margin: 2em;
-    margin-bottom: 6em;
-    padding: 3em;
+    margin: 1em;
+    margin-bottom: 4em;
+    padding: 2em;
     width: -webkit-fit-content;
     width: -moz-fit-content;
     width: fit-content;
-    min-height: 40vh;
-    -ms-flex-item-align: end;
-        align-self: flex-end;
-    border-radius: 5px;
-    -webkit-box-shadow: -20px 10px 20px 2px #8988882b;
-            box-shadow: -20px 10px 20px 2px #8988882b;
-    margin-left: 5em;
-  }
-  .about-section .text-container .box-2 {
-    margin: 2em;
-    margin-bottom: 6em;
-    padding: 3em;
-    width: -webkit-fit-content;
-    width: -moz-fit-content;
-    width: fit-content;
-    min-height: 40vh;
-    -ms-flex-item-align: start;
-        align-self: flex-start;
-    border-radius: 5px;
-    -webkit-box-shadow: 0px 20px 20px 2px #76757528;
-            box-shadow: 0px 20px 20px 2px #76757528;
-    margin-top: 5em;
-  }
-  .about-section .text-container .box-3 {
-    margin: 2em;
-    margin-bottom: 6em;
-    padding: 3em;
-    width: -webkit-fit-content;
-    width: -moz-fit-content;
-    width: fit-content;
-    min-height: 55vh;
     -ms-flex-item-align: center;
         -ms-grid-row-align: center;
         align-self: center;
+    -webkit-box-shadow: 0px 10px 20px 2px #81818131;
+            box-shadow: 0px 10px 20px 2px #81818131;
     border-radius: 5px;
-    -webkit-box-shadow: 20px 10px 20px 2px #81818131;
-            box-shadow: 20px 10px 20px 2px #81818131;
-    margin-top: 2em;
+  }
+  .about-section .text-container .box-2 {
+    margin: 1em;
+    margin-bottom: 4em;
+    padding: 2em;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    -webkit-box-shadow: 0px 10px 20px 2px #81818131;
+            box-shadow: 0px 10px 20px 2px #81818131;
+    border-radius: 5px;
+  }
+  .about-section .text-container .box-3 {
+    margin: 1em;
+    margin-bottom: 4em;
+    padding: 2em;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    -webkit-box-shadow: 0px 10px 20px 2px #81818131;
+            box-shadow: 0px 10px 20px 2px #81818131;
+    border-radius: 5px;
   }
   .about-section .contact-section {
     margin-top: 10em;
@@ -2676,7 +2402,7 @@ select {
   }
 }
 
-@media only screen and (min-width: 300px) and (max-width: 513px) {
+@media only screen and (min-width: 280px) and (max-width: 450px) {
   #about {
     margin-inline: 1em;
   }
