--- a/individual-work/dvop-web/styles/_header.scss
+++ b/individual-work/dvop-web/styles/_header.scss
@@ -25,6 +25,7 @@
                     margin: 10px;
                     display: flex;
                     align-items: center;
+                    letter-spacing: -1px;
                     .button-container li {
                         position: relative;
                         float: left;
@@ -91,6 +92,7 @@
                     margin: 10px;
                     display: flex;
                     align-items: center;
+                    letter-spacing: -1px;
                     .button-container li {
                         position: relative;
                         float: left;
@@ -157,6 +159,7 @@
                     margin: 10px;
                     display: flex;
                     align-items: center;
+                    letter-spacing: -1px;
                     .button-container li {
                         position: relative;
                         float: left;
@@ -208,6 +211,7 @@
                     margin: 10px;
                     display: flex;
                     align-items: center;
+                    letter-spacing: -1px;
                     .button-container li {
                         position: relative;
                         float: left;
