--- a/individual-work/dvop-web/styles/_footer.scss
+++ b/individual-work/dvop-web/styles/_footer.scss
@@ -7,12 +7,13 @@
         @include flex-column-center;
         align-items: center;
         .footer-text-container {
+            text-align: center;
             &:nth-child(1) {
                 p {
                     color: $footer-color;
                     margin-top: .3em;
                     font-size: clamp(.8vw, 1em);
-                    span {
+                    a {
                         color: $footer-color;
                         text-decoration: underline;
                         font-size: clamp(.8vw, 1em);
@@ -32,12 +33,13 @@
         @include flex-column-center;
         align-items: center;
         .footer-text-container {
+            text-align: center;
             &:nth-child(1) {
                 p {
                     color: $footer-color;
                     font-size: clamp(.8vw, 1em);
                     margin-top: .1em;
-                    span {
+                    a {
                         color: $footer-color;
                         text-decoration: underline;
                         font-size: clamp(.8vw, 1em);
@@ -57,12 +59,13 @@
         @include flex-column-center;
         align-items: center;
         .footer-text-container {
+            text-align: center;
             &:nth-child(1) {
                 p {
                     color: $footer-color;
                     font-size: clamp(.8vw, 1em);
                     margin-top: .1em;
-                    span {
+                    a {
                         color: $footer-color;
                         text-decoration: underline;
                         font-size: clamp(.8vw, 1em);
@@ -82,12 +85,13 @@
         @include flex-column-center;
         align-items: center;
         .footer-text-container {
+            text-align: center;
             &:nth-child(1) {
                 p {
                     color: $footer-color;
                     font-size: clamp(.8vw, 1em);
                     margin-top: .1em;
-                    span {
+                    a {
                         color: $footer-color;
                         text-decoration: underline;
                         font-size: clamp(.8vw, 1em);
