--- a/individual-work/dvop-web/styles/_mixin.scss
+++ b/individual-work/dvop-web/styles/_mixin.scss
@@ -56,3 +56,11 @@
     box-shadow: 0px 10px 20px 2px #81818131;
     border-radius: 5px;
 }
+
+@mixin homepage-image-desc-p {
+    width: 100%;
+    max-width: 25em;
+    height: 100%;
+    /* padding: max(3vw, 1em); */
+    /* font-size: clamp(1.20rem, calc(0.94rem + 1.32vw), 1.88rem); */
+}
